# ECDLP-Diem

./: .gitignore  CMakeLists.txt  Makefile  README.md  default.nix
include/: determinant.hpp  finitefield.hpp  gauss.hpp  grobner.hpp  poly.hpp  semaev.hpp  weil.hpp
src/: finitefield.cpp  main.cpp
test/: determinant.cpp  ff-basic.cpp  fibonacci.cpp  gauss.cpp  grobner.cpp  poly-basic.cpp  semaev.cpp  weil.cpp
